# price_loader

./: .env  .gitignore  Dockerfile  README.md  config_data.csv  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2f4e058086ab_initial.py  5433fe483bd1_initial.py
price_loader/: config.py  crud.py  db_helper.py  loader.py  logger.py  mail_reader.py  main.py  models.py  schemas.py
price_loader/sender_configuration/: api.py  crud.py  models.py  schemas.py
