[tool.poetry]
name = "price_loader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
pydantic-settings = "^2.8.1"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.40"
uvicorn = "^0.34.0"
imap-tools = "^1.10.0"
aioimaplib = "^2.0.1"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
